Dark mode colour fix.

--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -279,6 +279,7 @@
         --rule-thin-background: var(--dark-grey);
 
         --grid-default-background: var(--very-very-dark-grey);
+        --grid-default-text: var(--dark-grey);
         --grid-default-border: var(--very-dark-grey);
         --grid-compatible-background: var(--mid-green);
         --grid-incompatible-background: var(--very-dark-grey);
